// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Cover/> goldens > full: title + subtitle + custom eyebrow > manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "sanity-lockup-white-on-black",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/slides-template/src/assets/sanity-lockup-white-on-black.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {
    "cover:eyebrow": "shape_3",
    "cover:subtitle": "shape_5",
    "cover:title": "shape_4",
  },
  "templateName": "sanity",
}
`;

exports[`<Cover/> goldens > full: title + subtitle + custom eyebrow > ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#0b0b0b",
    },
    "type": "updateShapeProperties",
  },
  {
    "rect": {
      "h": 165100,
      "w": 11582400,
      "x": 304800,
      "y": 304800,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_3",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_3",
    "text": "Q2 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 7,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "rect": {
      "h": 1092200,
      "w": 11582400,
      "x": 304800,
      "y": 622300,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_4",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_4",
    "text": "Q2 Review",
    "type": "insertText",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 9,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 66,
      "foregroundColor": "#ffffff",
    },
    "type": "updateTextStyle",
  },
  {
    "rect": {
      "h": 609600,
      "w": 5791200,
      "x": 304800,
      "y": 1854200,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_5",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_5",
    "text": "Structure powers intelligence",
    "type": "insertText",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 29,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 24,
      "foregroundColor": "#ffffff",
    },
    "type": "updateTextStyle",
  },
  {
    "altText": "Sanity logo",
    "imageId": "image_6",
    "rect": {
      "h": 368300,
      "w": 1460500,
      "x": 304800,
      "y": 6235700,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/slides-template/src/assets/sanity-lockup-white-on-black.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_7",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_7",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_7",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_7",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;

exports[`<Cover/> goldens > minimum: title only > manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "sanity-lockup-white-on-black",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/slides-template/src/assets/sanity-lockup-white-on-black.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {
    "cover:eyebrow": "shape_3",
    "cover:title": "shape_4",
  },
  "templateName": "sanity",
}
`;

exports[`<Cover/> goldens > minimum: title only > ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#0b0b0b",
    },
    "type": "updateShapeProperties",
  },
  {
    "rect": {
      "h": 165100,
      "w": 11582400,
      "x": 304800,
      "y": 304800,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_3",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_3",
    "text": "EYEBROW",
    "type": "insertText",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 7,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "rect": {
      "h": 1092200,
      "w": 11582400,
      "x": 304800,
      "y": 622300,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_4",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_4",
    "text": "Q2 Review",
    "type": "insertText",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 9,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 66,
      "foregroundColor": "#ffffff",
    },
    "type": "updateTextStyle",
  },
  {
    "altText": "Sanity logo",
    "imageId": "image_5",
    "rect": {
      "h": 368300,
      "w": 1460500,
      "x": 304800,
      "y": 6235700,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/slides-template/src/assets/sanity-lockup-white-on-black.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_6",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_6",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;
